WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40385
Fix fast/parser/hex-entities-length.html for HTML5 parser
https://bugs.webkit.org/show_bug.cgi?id=40385
Summary
Fix fast/parser/hex-entities-length.html for HTML5 parser
Tony Gentilcore
Reported
2010-06-09 12:46:02 PDT
Fix fast/parser/hex-entities-length.html for HTML5 parser
Attachments
Patch
(2.00 KB, patch)
2010-06-09 12:56 PDT
,
Tony Gentilcore
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tony Gentilcore
Comment 1
2010-06-09 12:56:02 PDT
Created
attachment 58281
[details]
Patch
Tony Gentilcore
Comment 2
2010-06-09 13:07:55 PDT
Minefield passes this test, and it appears that if the "Preprocessing the input stream" spec were strictly followed it could not pass the test. Also, I poked around at the minefield implementation and found where these character ranges are replaced for entities (in handleNcrValue). But can't find anywhere where they are replaced in the input stream itself (they are just passed to emitOrAppendTwo). Links:
http://mxr.mozilla.org/mozilla-central/source/parser/html/nsHtml5Tokenizer.cpp
http://mxr.mozilla.org/mozilla-central/source/parser/html/nsHtml5StreamParser.cpp
Adam Barth
Comment 3
2010-06-09 14:54:49 PDT
Comment on
attachment 58281
[details]
Patch Yep. This will fix a bunch of tests, actually. Can you email public-html with this feedback on the spec?
Adam Barth
Comment 4
2010-06-09 15:05:33 PDT
Comment on
attachment 58281
[details]
Patch Clearing flags on attachment: 58281 Committed
r60916
: <
http://trac.webkit.org/changeset/60916
>
Adam Barth
Comment 5
2010-06-09 15:05:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug