WebCore/html/HTML5Lexer.h
@@ -159,7 +159,11 @@ namespace WebCore {
                     m_skipNextNewLine = true;
                 } else {
                     m_skipNextNewLine = false;
-                    if (m_nextInputCharacter == '\0' || (m_nextInputCharacter >= 0xD800 && m_nextInputCharacter <= 0xDFFF))
+                    // FIXME: The spec indicates that the surrogate pair range as well as
+                    // a number of specific character values are parse errors and should be replaced
+                    // by the replacement character. We suspect this is a problem with the spec as doing
+                    // that filtering breaks surrogate pair handling and causes us not to match Minefield.
+                    if (m_nextInputCharacter == '\0')
                         m_nextInputCharacter = 0xFFFD;
                 }
                 return true;
